<resources>
    <string name="app_name">Twitter Clone</string>

    <string name="new_tweets">New Tweets</string>
    <string name="extended_FB_Desc">New Tweets</string>
    <string name="main_FB_Desc">FAB</string>
    <string name="home_for_you_tn">For You</string>
    <string name="home_following_tn">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retweets">Retweets</string>
    <string name="quotes">Quotes</string>
    <string name="like">Like</string>
    <string name="view">View</string>
    <string name="show_this_thread">Show this thread</string>
    <string name="long_text">TabLayout provides a horizontal layout to display tabs. Population of the tabs to display is done through TabLayout. Tab instances. You create tabs via newTab() From there you can change the tab\'s label or icon via TabLayout</string>
    <string name="long_short_text">TabLayout provides a horizontal layout to display tabs. Population of the tabs to display is done through TabLayout.</string>
    <string name="txt_spaces_title1">Happening Now</string>
    <string name="txt_spaces_title2">Spaces going on right now</string>
    <string name="live">Live</string>
    <string name="listening">listening</string>
    <string name="host">Host</string>
    <string name="start_listening_text">Your mic will be off to start with</string>
    <string name="signup_message">See what\'s happening in the world right now</string>
    <string name="policies">By signing up, you agree to our Terms, privacy Policy, and Cookies Use.</string>
    <string name="have_account_already">Have an account already?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="create_account">Create account</string>
    <string name="signup_text">To get started, first enter your phone, email, or @username</string>
    <string name="login_username">Phone, email, or username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="dob_not_showing">This will not be showing publicly. Conform your age, even if this account is for a business, a pet, or something else.</string>
    <string name="next">Next</string>
    <string name="use_email_instead">Use email instead</string>
    <string name="signup_TnC">By signing up, you agree yo the Terms of Service and Private Policy, including Cookie Use. Twitter may use your content information, including your email address and phone number for purpose outlined in our Privacy Policy, like keeping your account secure and personalizing our services, including ads. Learn more. Other will be able find you by email or phone number, when provided, unless you choose otherwise here.</string>
    <string name="follow">Follow</string>
    <string name="username">username</string>
    <string name="following_no">121</string>
    <string name="following">Following</string>
    <string name="not_followed_by_any_youre_following">Not followed by any you\'re following</string>
    <string name="txt_public">Public</string>
    <string name="what_s_happening">What\'s Happening</string>
    <string name="tweet">Tweet</string>
    <string name="everyone_can_reply">Everyone can reply</string>
    <string name="search_twitter">Search Twitter</string>
    <string name="notification">Notification</string>
    <string name="spaces">Spaces</string>
    <string name="search_direct_message">Search Direct Message</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>

</resources>