<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="35dp"
    android:paddingEnd="35dp"
    android:paddingBottom="35dp"
    tools:context=".GoogleLoginActivity">

    <include
        layout="@layout/google_login_top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSignup_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="@string/signup_message"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_continueWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/continue_with_google"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:icon="@drawable/google_logo"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:background="@drawable/shape_button"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_account"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_continueWithGoogle">

        <View
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="5"
            android:background="@color/secondary_black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="or"
            style="@style/SECONDARYTEXT"
            android:gravity="center"
            android:textSize="16sp"/>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="5"
            android:background="@color/secondary_black" />


    </LinearLayout>


    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/shape_button"
        android:backgroundTint="@color/primary_black"
        app:layout_constraintBottom_toTopOf="@+id/txt_privacyPolicy"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_privacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/policies"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account_already"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/CWG_login_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginStart="-10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>