<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".NewTweetActivity">

    <ImageView
        android:id="@+id/imageView8"
        style="@style/PRIMARYICON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage_newTweet"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="6dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:backgroundTint="@color/p1"
        android:text="@string/tweet"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_publishTo_newTweet"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        app:strokeColor="@color/p1"
        android:textColor="@color/p1"
        android:text="@string/txt_public"
        android:textSize="14sp"
        android:paddingEnd="10dp"
        app:icon="@drawable/ic_keyboard_arrow_down"
        app:iconTint="@color/p1"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage_newTweet"
        app:layout_constraintStart_toEndOf="@+id/profileImage_newTweet"
        app:layout_constraintTop_toTopOf="@+id/profileImage_newTweet"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="50dp"
        android:gravity="top"
        android:hint="@string/what_s_happening"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_publishTo_newTweet" />

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/secondary_black"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_world"
        app:layout_constraintBottom_toTopOf="@+id/view7"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/p1" />

    <TextView
        android:id="@+id/textView4"
        style="@style/PRIMARYTEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/everyone_can_reply"
        android:textColor="@color/p1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/secondary_black"
        app:layout_constraintBottom_toTopOf="@+id/btn_location_newTweet" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ImagePick_newTweet"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_image_pick"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_GIF_newTweet"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_gif"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_ImagePick_newTweet" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_poll_newTweet"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_list"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_GIF_newTweet" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_location_newTweet"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_location"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_poll_newTweet" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_addTweet_newTweet"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_add_filled"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>