<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/SCREEN"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#B57CF8"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/linearLayout_spaces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                >

                <ImageView
                    android:id="@+id/status_spaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_horizontal_distribute"
                    android:layout_alignParentStart="true"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/txtLive_spaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/live"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_toEndOf="@id/status_spaces"/>

                <ImageView
                    android:id="@+id/more_spaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more"
                    android:layout_alignParentEnd="true"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/title_spaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtLive_spaces"
                    android:layout_marginTop="10dp"
                    android:text="Poch is the front runner !! Good news? #CFC"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardView_spaces"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/title_spaces">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileImage1_spaces"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileImage2_spaces"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@color/gray"
                        app:layout_constraintEnd_toEndOf="@+id/profileImage1_spaces"
                        app:layout_constraintStart_toEndOf="@+id/profileImage1_spaces"
                        app:layout_constraintTop_toTopOf="parent" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileImage3_spaces"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintEnd_toEndOf="@+id/profileImage2_spaces"
                        app:layout_constraintStart_toEndOf="@+id/profileImage2_spaces"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/listening_spaces"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="598"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/profileImage3_spaces"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtListening_spaces"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/listening"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/listening_spaces"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/linearLayout2_spaces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout_spaces"
                android:layout_marginTop="4dp"
                android:background="#AA64FF"
                android:padding="15dp"
                android:gravity="center_vertical"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/HostProfileImage_spaces"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_launcher_background"/>

                <TextView
                    android:id="@+id/hostName_spaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Host Name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_toEndOf="@id/HostProfileImage_spaces"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#CAA0FD"
                    android:layout_marginStart="10dp"
                    app:cardCornerRadius="5dp"
                    android:layout_toEndOf="@id/hostName_spaces"
                    >

                    <TextView
                        android:id="@+id/txtHost_spaces"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/host"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/hostBio_spaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:layout_marginTop="10dp"
                    android:text="@string/long_text"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_below="@id/HostProfileImage_spaces"/>

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="85dp" />


</androidx.constraintlayout.widget.ConstraintLayout>